# siddhi-llvm

./: CMakeLists.txt  main.cpp
high-performance/: Buffer.h  main.cpp
src/buffer/: BufferGenericQueue.cpp  BufferGenericQueue.h
src/input/: Consumer.cpp  Consumer.h  Producer.cpp  Producer.h
src/query/: ExecutionElement.cpp  ExecutionElement.h
